# lve

./: .gitignore  CMakeLists.txt  README.md  first_app.cpp  first_app.h  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp
shaders/: simple_shader.vert
